<resources>
    <string name="app_name">E-learning</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="font_type">Futura Md Bt</string>
    <string name="easy_learning_at_it_peak">Easy Learning at its peak</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="title_activity_administer_course">AdministerCourse</string>
    <string name="title_activity_upload_books">UploadBooks</string>
    <string name="title_activity_admin">Admin</string>
    <string name="book_name">Book Name</string>
    <string name="book_author">Book Author</string>
    <string name="question_in_full">Question in full</string>
    <string name="topic_name">Topic Name</string>
    <string name="topic_note">Topic Note</string>
    <string name="example">Example</string>
    <string name="more_notice">More Notice e.g books to read</string>
    <string name="continue_">Continue</string>
    <string name="example_">Example</string>
    <string name="question_in_full_uploaded_by_teacher">Question in full from what the teacher has uploaded</string>
    <string name="answer">Answer</string>
    <string name="add_more_question">Add more question</string>
    <string name="upload_course">Administer Course</string>
    <string name="upload_books">Upload Book</string>
    <string name="submit">Submit</string>
    <string name="proceed_to_answer_questn">Proceed to answer Questions ?</string>
    <string name="title_activity_elearning">Elearning</string>
    <string name="title_activity_user_registration">UserRegistration</string>
    <string name="title_activity_elearning_student">ElearningStudent</string>
    <string name="title_activity_question">Question</string>
    <string name="title_activity_work_reading">WorkReadingActivity</string>
    <string name="title_activity_chat_room">Chat</string>


</resources>
