<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/content_question"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.example.progtobi.e_learning.AddQuestionActivity"
    tools:showIn="@layout/question">

    <ScrollView
        android:id="@+id/scrow5"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="15dp">

            <EditText
                android:id="@+id/questionedittxt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/topic_name_textfield"
                android:ems="10"
                android:gravity="top"
                android:lines="10"
                android:padding="15px"
                android:inputType="textMultiLine"
                android:hint="@string/question_in_full"
                android:textColorHint="@color/colorPrimary"
                android:textStyle="bold">

                <requestFocus />
            </EditText>

            <EditText
                android:id="@+id/exampleedittxt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:hint="@string/example"
                android:padding="15px"
                android:textColor="@color/colorPrimary"
                android:textStyle="bold"
                android:background="@drawable/topic_name_textfield"
                android:ems="10"
                android:gravity="top" />

            <ImageButton
                android:id="@+id/imageButton1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:background="@drawable/attach_file_img" />

            <Button
                android:id="@+id/addmorebtn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:background="@color/colorPrimary"
                android:fontFamily="@string/font_type"
                android:text="@string/add_more_question"
                android:textColor="@android:color/white"
                android:textSize="24sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/adminsterquestn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:fontFamily="@string/font_type"
                android:text="@string/upload_course"
                android:background="@color/colorPrimary"
                android:textColor="@android:color/white"
                android:textSize="24sp"
                android:textStyle="bold" />
        </LinearLayout>

    </ScrollView>
</RelativeLayout>
