<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/content_login"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.example.progtobi.e_learning.LoginActivity"
    tools:showIn="@layout/login"
    android:background="@drawable/login_background"
    android:padding="15dp" >

    <LinearLayout
        android:id="@+id/linear1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:orientation="vertical" >

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/username"
                android:ems="10"
                android:fontFamily="@string/font_type"
                android:padding="10dp"
                android:hint="@string/username"
                android:textStyle="bold"
                android:inputType="text"
                android:textColor="@color/colorPrimaryText" />

        </android.support.design.widget.TextInputLayout>


        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <EditText
                android:id="@+id/password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignLeft="@+id/editText1"
                android:layout_below="@+id/editText1"
                android:layout_marginTop="16dp"
                android:ems="10"
                android:inputType="textPassword"
                android:fontFamily="@string/font_type"
                android:textStyle="bold"
                android:padding="10dp"
                android:hint="@string/password"
                android:textColor="@color/colorPrimaryText" />
        </android.support.design.widget.TextInputLayout>


        <ProgressBar
            android:id="@+id/pb"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:visibility="gone" />
        <Button
            android:id="@+id/loginbtn"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_alignLeft="@+id/editText2"
            android:layout_below="@+id/editText2"
            android:layout_marginTop="14dp"
            android:background="@color/colorPrimaryDark"
            android:fontFamily="@string/font_type"
            android:text="@string/login"
            android:textColor="@android:color/white"
            android:textSize="24sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tv_register"
            android:layout_marginTop="20dp"
            android:textColor="@color/colorAccent"
            android:layout_gravity="center"
            android:textStyle="bold"
            android:textSize="20sp"
            android:text="Not Registered ? Register Now !"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </LinearLayout>

</RelativeLayout>
